--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,10 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.2/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.822 (Apr 3, 2021) [[v1.10.3.822]]
+
+* Fix issue with git deps where new commits on branches were not fetched
+
 === 1.10.3.814 (Mar 16, 2021) [[v1.10.3.814]]
 
 * git deps: switch from using jgit to shelling out to git (must be git >= 2.5)
