--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -1349,6 +1349,7 @@ In this guide we have covered most of the features for designing and using specs
 
 == More information
 
-* <<xref/../../../about/spec#,Spec rationale>>
+* <<xref/../../../about/spec#,spec Rationale>>
 * https://clojure.github.io/spec.alpha[API Docs]
 * https://github.com/clojure/spec.alpha[Project]
+* <<xref/../../../community/spec_resources#,spec Resources>>
