move spec resources to resources page

--- a/content/about/spec.adoc
+++ b/content/about/spec.adoc
@@ -385,4 +385,4 @@ Rich Hickey
 * <<xref/../../../guides/spec#,spec Guide>>
 * https://clojure.github.io/spec.alpha[API Docs]
 * https://github.com/clojure/spec.alpha[Project]
-* <<xref/../../../community/spec_resources#,spec Resources>>
+* <<xref/../../../community/resources#spec,spec Resources>>
