--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -46,6 +46,18 @@ Community:
 * https://guide.clojure.style/[Clojure Style Guide]
 * https://www.maria.cloud/[Maria] - a coding environment for beginners
 
+[[spec]]
+Spec:
+
+* https://www.youtube.com/watch?v=YR5WdGrpoug[Maybe Not - Rich Hickey]
+* https://www.youtube.com/watch?v=oyLBGkS5ICk[Spec-ulation - Rich Hickey]
+* https://vimeo.com/195711510[Rich Hickey on Clojure Spec - LispNYC]
+* https://www.cognitect.com/cognicast/103[Clojure spec with Rich Hickey - Cognicast Episode 103]
+* https://www.youtube.com/playlist?list=PLZdCLR02grLrju9ntDh3RGPpWSWBvjwXg[Spec Screencasts]
+* https://clojure.org/news/2016/05/23/introducing-clojure-spec[Introducing clojure.spec - Rich Hickey]
+* https://corfield.org/blog/2019/09/13/using-spec/[How do you use clojure.spec - Sean Corfield]
+* https://www.pixelated-noise.com/blog/2020/09/10/what-spec-is/[What Clojure spec is and what you can do with it (an illustrated guide) - Stathis Sideris]
+
 Newsletters
 
 * http://therepl.net[The REPL]
