--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -1352,4 +1352,4 @@ In this guide we have covered most of the features for designing and using specs
 * <<xref/../../../about/spec#,spec Rationale>>
 * https://clojure.github.io/spec.alpha[API Docs]
 * https://github.com/clojure/spec.alpha[Project]
-* <<xref/../../../community/spec_resources#,spec Resources>>
+* <<xref/../../../community/resources#spec,spec Resources>>
