--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -58,7 +58,7 @@ Spec:
 * https://corfield.org/blog/2019/09/13/using-spec/[How do you use clojure.spec] - Sean Corfield
 * https://www.pixelated-noise.com/blog/2020/09/10/what-spec-is/[What Clojure spec is and what you can do with it (an illustrated guide)] - Stathis Sideris
 
-Newsletters
+Newsletters:
 
 * http://therepl.net[The REPL]
 * http://insideclojure.org[Inside Clojure] - weekly journals about development of Clojure
