--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -227,12 +227,12 @@ Coordinates can take several forms depending on the coordinate type:
 *** Default is to auto-detect the project type (currently either `:deps` or `:pom`)
 * Local jar coordinate: `{:local/root "/path/to/file.jar"}`
 ** If the jar includes a pom.xml file, it will be used to find transitive deps
-* Git coordinate: `{:git/url "https://github.com/user/project.git", :sha "sha", :tag "tag"}`
-** Required key `:git/url` can be one of the following:
+* Git coordinate: `{:git/url "https://github.com/user/project.git", :git/sha "sha", :git/tag "tag"}`
+** Optional key `:git/url` will be inferred from lib, or can be one of the following:
 *** https - secure anonymous access to public repos
 *** ssh or user@host form urls (including GitHub) - ssh-based access (see Git configuration section)
-** Required key `:sha` should indicate the full commit sha
-** Optional key `:tag` is used only to indicate the semantics of the sha
+** Optional key `:git/tag` is used only to indicate the semantics of the sha (`:tag` still supported for backwards compatibility)
+** Optional key `:git/sha` if tag provided, can be prefix sha, otherwise should be full sha (`:sha` still supported for backwards compatibility)
 ** Optional key `:deps/root`
 *** Specifies the relative path within the root to search for the manifest file
 ** Optional key `:deps/manifest` - same as in `:local` deps
@@ -241,7 +241,7 @@ Coordinates can take several forms depending on the coordinate type:
 ----
 {:deps
  {org.clojure/tools.reader {:mvn/version "1.1.1"}
-  github-sally/awesome {:git/url "https://github.com/sally/awesome.git", :sha "123abcd549214b5cba04002b6875bdf59f9d88b6"}
+  io.github.sally/awesome {:tag "v1.2.3" :sha "123abcd"}
   ;; ... add more here
  }}
 ----
@@ -729,18 +729,16 @@ When you've determined which version of the tool to install, use the `install-to
 clj -T:deps install-tool ...
 ---
 
-The args available to `install-tool` are:
+The args to `install-tool` are:
 
-* `:mvn/lib` - Maven coordinate (groupId/artifactId)
-* `:git/lib` - git lib name (used to construct a git url as per above)
-* `:v` - Maven version or git lib sha or tag (will be resolved to a sha)
+* lib - val is coord map, as per deps.edn
 * `:as` - tool name, will be used for later invocations
 
 For example:
 
 [source,shell]
 ----
-clj -T:deps install-tool :git/lib io.github.clojure/tools.deps.graph :v '"tools.deps.graph-1.0.56"' :as deps-graph
+clj -T:deps install-tool io.github.clojure/tools.deps.graph '{:git/tag "tools.deps.graph-1.0.56"}' :as deps-graph
 ----
 
 === Tool usage
@@ -797,7 +795,7 @@ Best practices:
 Instructions for users:
 
 * Find tool versions: `clj -T:deps find-versions :git/lib io.github.USER/TOOL`
-* Install tool with `clj -T:deps install-tool :git/lib io.github.ME/TOOL :v '"VERSION"' :as NAME`
+* Install tool with `clj -T:deps install-tool io.github.MY/TOOL '{:git/tag "VERSION"}' :as NAME`
 * Invoke tool with `clj -TNAME f args...`
 
 = Command line reference
