--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -146,6 +146,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * DRW Trading Group
 * Dyne.org
 * eBay
+* Ekata
 * Element 84
 * Empear
 * English Language iTutoring
