--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -239,11 +239,11 @@ Aliases give a name to a data structure that can be used either by the Clojure t
 
 = Basis and classpath
 
-The core of the tools.deps library is a process to take a merged deps.edn file, arg maps for the resolve-deps and make-classpath steps, and produce the "runtime basis", or "basis" for short. The basis is a superset of the deps.edn file also containing those args, the lib map, and the classpath map.
+The core of the tools.deps library is a process to take a merged deps.edn file, arg maps for the resolve-deps and make-classpath-map steps, and produce the "runtime basis", or "basis" for short. The basis is a superset of the deps.edn file also containing those args, the lib map, and the classpath map.
 
 The JVM classpath consists of a series of roots, either directory paths or the path to a jar file. Classes (and Clojure files) map via package or namespace to a path relative to a classpath root. For example, the `java.lang.String` class can be found at path `java/lang/String.class` and the `clojure.set` Clojure namespace may be found at paths `clojure/set.class` (for AOT), `clojure/set.clj`, or `clojure/set.cljc`. When the JVM needs to load one of these files it searches each root for the relative path and loads it when found.
 
-We divide the process of building a classpath into two primary operations: `resolve-deps` and `make-classpath`.
+We divide the process of building a classpath into two primary operations: `resolve-deps` and `make-classpath-map`.
 
 == resolve-deps
 
@@ -306,11 +306,11 @@ The second `args-map` is a map of optional modifications to the standard expansi
 {:default-deps {org.clojure/core.cache {:mvn/version "0.6.4"}}}
 ----
 
-== make-classpath
+== make-classpath-map
 
-**`(make-classpath lib-map paths args-map)`**
+**`(make-classpath-map lib-map paths args-map)`**
 
-The `make-classpath` step takes the lib map (the result of `resolve-deps`), the internal source paths of the project `["src"]`, an args-map of optional modifications, and produces a classpath string for use in the JVM.
+The `make-classpath-map` step takes the lib map (the result of `resolve-deps`), the internal source paths of the project `["src"]`, an args-map of optional modifications, and produces a classpath string for use in the JVM.
 
 The args-map includes support for modifications to be applied while making the classpath: adding extra paths, and overriding the location of libraries specified in the lib map. These modifications can be used separately or together or not at all in a map like this:
 
@@ -379,7 +379,7 @@ A hash is computed based on the config file paths, the resolve-aliases, and the 
 Files cached (if needed):
 
 * `<hash>.libs` - a `::lib-map` in the https://github.com/clojure/tools.deps.alpha/blob/master/src/main/clojure/clojure/tools/deps/alpha/specs.clj[specs], the output of running `resolve-deps`
-* `<hash>.cp` - a classpath string, the output of `make-classpath`
+* `<hash>.cp` - a classpath string, the output of `make-classpath-map`
 * `<hash>.jvm` - jvm options for main execution
 * `<hash>.main` - main options for main execution
 * `<hash>.basis` - the runtime basis, passed to the program
@@ -415,7 +415,7 @@ The resolve-deps args should be provided as an alias in one of the deps sources 
 
 == Make classpath modifiers
 
-The make-classpath modifiers are provided in a map that was described in a prior section:
+The make-classpath-map modifiers are provided in a map that was described in a prior section:
 
 * `:extra-paths` - a collection of string paths to add to `:paths` (should be in the project)
 * `:classpath-overrides` - a map of lib to string path to replace the location of the lib
@@ -699,7 +699,7 @@ This section summarizes all of the available arg map keys that `clj` uses and th
 ** `:extra-deps` - map of lib to coords that should be added to the root deps
 ** `:override-deps` - map of lib to coords that should *replace* deps in the root deps
 ** `:default-deps` - map of lib to coords that should be used if the coord is nil in root or transitive deps
-* make-classpath
+* make-classpath-map
 ** `:extra-paths` - vector of string paths (or keyword aliases to same) to add to base paths
 ** `:classpath-overrides` - map of lib to string path to replace lib on classpath
 * jvm opts
