Add new podcast "Lost in Lambduhhs" to resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -82,6 +82,7 @@ Podcasts:
 * https://clojuredesign.club/[Functional Design in Clojure] - Christoph and Nate discuss software design problems and how they might be solved using functional principles and the Clojure programming language.
 * http://blog.cognitect.com/cognicast[Audio - Cognitect Blog] - A podcast by Cognitect, Inc. about software and the people that create it
 * https://anchor.fm/dosync-radio[(dosync radio)] - A podcast to discuss Clojure matters in Japanese.
+* https://anchor.fm/lostinlambduhhs[Lost in Lambduhhs] - Jordan Miller interviews a myriad of guests from all sectors of tech with a special focus on Clojure and Clojurescript
 
 Video training (commercial):
 
