--- a/content/guides/deps_and_cli.adoc
+++ b/content/guides/deps_and_cli.adoc
@@ -258,6 +258,34 @@ src:
 
 Note that the test dir is now included in the classpath.
 
+[[test_runner]]
+=== Use a test runner to run all tests
+
+You can extend the `:test` alias in the previous section to include the cognitect-labs https://github.com/cognitect-labs/test-runner[test-runner] for running all clojure.test tests:
+
+Extend the `:test` alias:
+
+[source,clojure]
+----
+{:deps
+ {org.clojure/core.async {:mvn/version "1.3.610"}}
+
+ :aliases
+ {:test {:extra-paths ["test"]
+         :extra-deps {io.github.cognitect-labs/test-runner
+                      {:git/url "https://github.com/cognitect-labs/test-runner.git"
+                       :sha "9e35c979860c75555adaff7600070c60004a0f44"}}
+         :main-opts ["-m" "cognitect.test-runner"]
+         :exec-fn cognitect.test-runner.api/test}}}
+----
+
+And then execute the test runner using the default config (run all tests in -test namespaces under the test/ dir):
+
+[source,shell]
+----
+clj -X:test
+----
+
 [[extra_deps]]
 === Add an optional dependency
 
