Add Zimpler to Clojure community companies
Swedish startup Zimpler is using Clojure in production for over 7 years now and should be on this list.

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -501,4 +501,5 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Zalando
 * Zendesk
 * Zen Finance
+* Zimpler
 * Zoona
