--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,10 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.839 (May 12, 2021) [[v1.10.3.839]]
+
+* Fix Linux installer breakage in 1.10.3.833
+
 === 1.10.3.833 (May 11, 2021) [[v1.10.3.833]]
 
 * https://clojure.atlassian.net/browse/TDEPS-177[TDEPS-177] - Fix Maven mirrors to look up by id, not name
