--- a/content/guides/clj_datatype_constructs.adoc
+++ b/content/guides/clj_datatype_constructs.adoc
@@ -11,59 +11,64 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Clojure supports several constructs for speaking to the Java world
 and/or creating types for polymorphic dispatch. +
-Because these constructs have overlapping capabilities, it may be confusing to know which construct to use at a given situation. +
+Because these constructs have overlapping capabilities,
+it may be confusing to know which construct to use at a given situation. +
+
 This guide clarifies what each construct is good at, while presenting minimal usage examples.
 
 
 == Leaving Java with defrecord
 
-So far this is all dealing with Java stuff from Clojure. +
 If we do not have to extend from a concrete Java Type, we can define our own types
 that implement interfaces (and protocols, coming up next!) from Clojure via the
 link:https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defrecord[defrecord] macro:
 
 [source,clojure-repl]
 ----
-user=> (defrecord Foo [a b]
-         Closeable
-         (close [this]
-           (prn (+ a b))))
-user.Foo
-user=> (.close (Foo. 2 2))
-4
-nil
+user=> (defrecord Person [first-name last-name age drunk])
+user.Person
+user=> (def piklrik (Person. "Pickle" "Rick" :unknown true))
+#'user.meeseeks
 ----
 
-Records are nicer than Java classes for the reasons described in the https://clojure.org/reference/datatypes#_deftype_and_defrecord[reference].
+Records are nicer than Java classes for a few reasons:
 
-https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deftype[deftype] is
-also available for implementing lower level constructs that require mutatable fields.
-
-== Protocols; like Java Interfaces, but better
-https://clojure.org/reference/protocols[Protocols] offer similar capabilities as Java interfaces, but are more powerful because:
-
-* They are a cross platform construct
-* They allow third party types to participate in any protocols
-
-Let's make a protocol that handles Java `ArrayList` instances as well as `Foo` records:
+* TODO: add more nicities.
+* They provide a complete implementation of a persistent map. That means that all values can be accessed like a map.
 
 [source,clojure-repl]
 ----
-user=> (defprotocol IBaz
-         (baz [this]))
+user=> (:first-name piklrik)
+-> "Pickle"
+user=> (:last-name piklrik)
+-> "Rick"
+----
 
-user=> (extend-protocol IBaz
-         ArrayList ;;A Java Class
-         (baz [this]
-           "ArrayList Baz")
-         Foo ;;A Clojure Record
-         (baz [this]
-           "Foo Baz"))
+The https://clojure.org/reference/datatypes#_deftype_and_defrecord[reference] describes the features of records in more detail.
+
+https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deftype[deftype] is
+also available for implementing lower level constructs that require mutatable fields
+or don't have map semantics.
+
+== Protocols; They're Like Java Interfaces
+https://clojure.org/reference/protocols[Protocols] offer similar capabilities as Java interfaces, but are more powerful because:
+
+* They are a cross platform construct
+* They allow third party types to participate in any protocol
+
+Let's make a protocol that handles instances of `Person`:
+
+[source,clojure-repl]
+----
+user=> (defprotocol Introduction
+         (introduce [this] "This is a docstring, not a method."))
+Introduction
+user=> (extend-protocol Introduction
+         Person
+         (introduce [p] (str "I'm " (:first-name p) " " (:last-name p) "!!")))
 nil
-user=> (baz (ArrayList.))
-"ArrayList Baz"
-user=> (baz (Foo. 1 1))
-"Foo Baz"
+user=> (introduce piklrik)
+"I'm Pickle Rick!!"
 ----
 
 The main thing to realize here is that protocols are more powerful than interfaces because we are able to create custom abstraction for types that we do not control (e.g. `java.util.Date`). +
@@ -80,19 +85,17 @@ Sometimes we want to create things that implement a protocol/interface but do no
 
 [source,clojure-repl]
 ----
-user=> (def rf (reify
-                 Closeable
-                 (close [this]
-                   (prn "reified closing!!"))
-                 IBaz
-                 (baz [this]
-                   "reified baz")))
+user=> (defn make-meeseeks
+         [p]
+         (reify Introduction
+           (introduce [_]
+             (str "I'm " (:first-name p) " " (:last-name p) ", look at me!"))))
 nil
-user=> (baz rf)
-"reified baz"
-user=> (.close rf)
-"reified closing!!"
-nil
+user=> (def meeseeks
+         (make-meeseeks (Person. "Mr." "Meeseeks" 0 false)))
+#'user/meeseeks
+user=> (introduce meeseeks)
+"I'm Mr. Meeseeks, look at me!"
 ----
 
 One might ask "Doesn't proxy achieve the same if you do not need to extend a concrete type?" +
