add discord links, closes #525

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -17,6 +17,8 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://clojure.org/community/user_groups[Clojure User Groups]
 * http://planet.clojure.in/[Planet Clojure] blog aggregator
 * #clojure IRC channel on https://freenode.net[freenode.net]
+* https://discord.gg/discljord[Discljord Clojure Discord Server]
+* https://discord.gg/MsejPv9JNG[Clojurians Discord Server]
 
 == Tutorials and Learning Materials
 
