--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -22,6 +22,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Adzerk
 * AGA
 * AgentsMutual/OnTheMarket
+* Agiliway
 * Airloyal
 * Ajira
 * Akamai
